# fox

./: README.md  pyproject.toml  setup.py
examples/: real_nvp.py
fox/: distributions.py  train.py  utils.py
fox/bijections/: simple.py
jax-flows/: nn.py  transforms.py
jax-flows/bijections/: ar.py  simple.py
src/fox/: core.py  nn.py  train.py  utils.py
src/fox/bijections/: simple.py
src/fox/sampling/: sampling.py
tests/: test_bijections.py
