[tool.poetry]
name = "jax-flows"
version = "0.1.0"
description = ""
authors = ["Marin Vlastelica <marin.vlastelicap@gmail.com"]

[tool.poetry.dependencies]
python = ">=3.7"
jax = "^0.2.25"
optax = "^0.0.9"
tqdm = "^4.62.3"
flax = "^0.3.6"
sklearn = "^0.0"
numpyro = "*"
dm-haiku = "^0.0.5"
pytest = "*"


[tool.poetry.dev-dependencies]

matplotlib = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
