[tool.poetry]
name = "fox"
version = "0.1.0"
description = "Normalizing Flows in JAX"
authors = ["Marin Vlastelica <marin.vlastelicap@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
jax = "*"
optax = "*"
tqdm = "*"
flax = "*"
numpyro = "*"
dm-haiku = "^0.0.9"
setuptools = "*"
pytest = "*"
scikit-learn = "^1.2.2"

[tool.poetry.dev-dependencies]

matplotlib = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
